# mplusfonts

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml
examples/: clock.rs  counter.rs  kana.rs  kanji.rs  kerning.rs  pangram.rs  spacing.rs  styles.rs
macros/: Cargo.toml  README.md
macros/src/: lib.rs
macros/src/mplus/: args.rs  charmap.rs  expr.rs  font.rs  mod.rs  source.rs
macros/src/mplus/bitmap/: color.rs  dict.rs  font.rs  glyph.rs  image.rs  mod.rs  units.rs
macros/src/mplus/bitmap/from_outline/: glyph.rs  halfwidth.rs  mod.rs  string.rs  strings.rs
macros/src/mplus/bitmap/from_outline/glyph/: aligner.rs  offsets.rs  spacing.rs
macros/src/mplus/charmap/: entry.rs
macros/src/mplus/font/: size.rs  weight.rs  width.rs
macros/src/strings/: attr.rs  item.rs  mod.rs  span.rs
macros/src/strings/visitor/: lit.rs  mac.rs  mod.rs
macros/tests/: bitmap_bless.rs  bitmap_tests.rs
macros/tests/bitmap/: render_glyphs_1_500_25_false_1_4_kern_dotless_i_j_liga.in  render_glyphs_1_500_25_false_1_4_kern_latin_1_sup_liga.in  render_glyphs_1_500_25_false_1_4_kern_space_tilde_liga.in  render_glyphs_2_500_25_false_1_4_kern_latin_ext_a_liga.in  render_glyphs_2_500_25_false_1_4_kern_latin_ext_b_liga.in  render_glyphs_code_100_500_25_false_1_4_hiragana_kanji.in  render_glyphs_code_125_500_25_false_1_4_katakana_kanji.in
src/: adapter.rs  builder.rs  charmap.rs  color.rs  font.rs  glyph.rs  lib.rs  metrics.rs  rect.rs  style.rs
src/image/: mix.rs  mod.rs  raw.rs  set.rs  sub.rs
