[package]
name = "mplusfonts-macros"
version = "0.1.4"
edition = "2024"
description = "Procedural macros re-exported in the mplusfonts crate"
documentation = "https://docs.rs/mplusfonts-macros"
readme = true
homepage = "https://crates.io/crates/mplusfonts-macros"
repository = "https://github.com/immersum/mplusfonts"
license = "MIT OR Apache-2.0"
keywords = ["bitmap", "font", "kanji", "monospaced", "variable-width"]
categories = []

[lib]
proc-macro = true

[dependencies]
lazy-static-include = "3.2.1"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
regex = "1.11.1"
swash = "0.2.2"
syn = { version = "2.0", features = ["full", "visit-mut"] }

[dev-dependencies]
embedded-graphics = "0.8.1"
embedded-graphics-simulator = "0.7.0"
mplusfonts = "0.1"
seq-macro = "0.3.6"

[features]
# Enables strings to be expanded into a doc-comment for inspection.
doc-comment = []

# Enables the expected results to be generated for integration tests.
bless-tests = []
